--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div class="ok">
   <div class="container">
     <header>
       <img id="dp" src="../images/dp.png" alt="">
@@ -35,7 +36,21 @@
     </section>
     <hr>
     <br>
-    
+  </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+
+
 </body>
+<footer>
+  <div class="rounded-social-buttons">
+    <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a class="social-button twitter" href="https://www.github.com/vijaygupta18" target="_blank"><i class="fab fa-github"></i></a>
+    <a class="social-button linkedin" href="https://www.linkedin.com/vijaygupta18" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+    <a class="social-button instagram" href="https://www.instagram.com/vijayguptaa18" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a>Creator @ <a href="https://www.github.com/vijaygupta18" style="color: gold; ">Vijay</a></a>
+   
+  </div>
+</footer>
 
 </html>
